--- a/.github/workflows/xray-check.yml
+++ b/.github/workflows/xray-check.yml
@@ -41,6 +41,8 @@ jobs:
               echo "xray is not running, restarting..."
               cd /home/okfine1/xray
               ./run.sh
+              cd /home/okfine1/caddy262
+              ./run.sh
           else
               echo "xray is running."
           fi
